--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,12 +1,72 @@
 .profile {
-    background-color: rgb(165, 245, 249);
-    margin: 20px auto;
+    background-color: rgb(234, 253, 253);
+    margin: 80px auto 0 auto;
     padding: 24px;
-    width: 420px;
+    width: 400px;
     border-radius: 18px;
     box-shadow: 11px 10px 5px -2px rgba(168,151,151,0.75);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .avatar {
-    width: 300px;
+    width: 200px;
+    margin: 20px auto 30px auto;
+    display: block;
+    border-radius: 50%;
+    border: 1px solid rgb(213, 211, 211);
+    box-shadow: 8px 10px 13px 0px rgba(166,161,161,0.75);
+    background-color: white;
+}
+
+.description {
+    text-align: center;
+}
+
+.name {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.tag {
+    font-size: 18px;
+    color: rgb(98, 97, 97);
+}
+
+.location {
+    font-size: 18px;
+    color: rgb(98, 97, 97);
+}
+
+.stats {
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    padding: 0;
+    background-color: white;
+}
+
+.statsItem {
+    border: 1px solid rgb(213, 211, 211);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: calc(100% / 3);
+    height: 100%;
+    
+}
+
+.label {
+    font-size: 18px;
+    color: rgb(98, 97, 97);
+    padding: 14px 0;
+}
+
+.quantity {
+    font-size: 18px;
+    color: rgb(98, 97, 97);
+    font-weight: bold;
+    padding: 0 0 14px 0;
 }
